fix merge conflicts

--- a/app/views/dinosaurs/index.html.erb
+++ b/app/views/dinosaurs/index.html.erb
@@ -1,4 +1,8 @@
-<p>
-  Modify me in `app/views/homes/index.html.erb` or change the root directive in
-  `config/routes.rb`
-</p>
+<h1>List of Dinosaurs:</h1>
+<ul>
+  <% @dinosaurs.each do |dinosaur|%>
+    <li>
+      <%= dinosaur.name %>
+    </li>
+  <% end %>
+</ul>
