--- a/app/views/dinosaurs/show.html.erb
+++ b/app/views/dinosaurs/show.html.erb
@@ -1,3 +1,4 @@
 <h1><%= @dinosaur.name %></h1>
 <p> Originally Found: <%= @dinosaur.location_found %></p>
 <p> <%= link_to "See More", @dinosaur.info_url %></p>
+<p> <%= link_to "Exctinctify this dinosaur!"
