--- a/app/views/dinosaurs/show.html.erb
+++ b/app/views/dinosaurs/show.html.erb
@@ -3,6 +3,7 @@
 <p> <%= link_to "See More", @dinosaur.info_url %></p>
 <h3>
 User reviews:
+</h3>
   <ul>
     <% @dinosaur.reviews.each do |r| %>
     <li>Reveiw: <%= r.body %>   |   Rating: <%= r.rating %>
@@ -10,15 +11,20 @@ User reviews:
     <%= link_to "Delete", r, method: :delete %></li>
     <% end %>
   </ul>
-</h3>
-<%= form_for [@dinosaur, @review] do |f| %>
-  <%= f.label :body %>
-  <%= f.text_field :body %>
-  <br>
-  <%= f.label :rating %>
-  <%= f.text_field :rating %>
-  <br>
-  <%= f.submit 'Submit' %>
+
+<% if user_signed_in? %>
+  <%= form_for [@dinosaur, @review] do |f| %>
+    <%= f.label :body %>
+    <%= f.text_field :body %>
+    <br>
+    <%= f.label :rating %>
+    <%= f.text_field :rating %>
+    <br>
+    <%= f.submit 'Submit' %>
+  <% end %>
+  <p> <%= link_to "Edit this dinosaur!", edit_dinosaur_path(@dinosaur) %></p>
+  <p> <%= button_to "Exctinctify this dinosaur!", @dinosaur, class: 'button round tiny', method: :delete %> </p>
+<% else %>
+  <%= link_to "Sign in", new_user_session_path %><br />
+  <%= link_to "Sign up", new_user_session_path %><br />
 <% end %>
-<p> <%= link_to "Edit this dinosaur!", edit_dinosaur_path(@dinosaur) %></p>
-<p> <%= button_to "Exctinctify this dinosaur!", @dinosaur, class: 'button round tiny', method: :delete %> </p>
