--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,3 +15,24 @@
  *= require foundation_and_overrides
 
  */
+.row {
+  margin: 30px;
+}
+
+.crud-buttons {
+  background-color: #bbb;
+}
+
+.crud-buttons:hover {
+  background: green;
+  box-shadow: 8px 8px 8px #777;
+}
+
+.dinosaur-link {
+  background-color: #999;
+  margin: 10px;
+}
+a {
+  text-decoration: none;
+  color: white;
+}
