--- a/app/views/dinosaurs/new.html.erb
+++ b/app/views/dinosaurs/new.html.erb
@@ -15,6 +15,6 @@
   </div>
   <br>
   <div class="actions">
-    <%= form.submit "Create a Dinosaur!", class: "button small round" %>
+    <%= form.submit "Create a Dinosaur!", class: "crud-buttons button expand round medium" %>
   </div>
 <% end %>
