--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,9 +4,10 @@
   <title>Dinosaurs</title>
   <%= stylesheet_link_tag 'application', media: 'all' %>
   <%= csrf_meta_tags %>
+  <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  
+
   <nav class="top-bar">
     <ul class="title-area">
       <li class="name">
@@ -32,7 +33,7 @@
     </div>
   <%- end -%>
 
-  <%= yield %>
+  <div class="row"> <%= yield %> </div>
 
   <%= javascript_include_tag 'application' %>
   <%= yield :extra_footer %>
