migration, model, seed, and forms updated with descriptions

--- a/app/views/dinosaurs/show.html.erb
+++ b/app/views/dinosaurs/show.html.erb
@@ -1,6 +1,7 @@
 <h1><%= @dinosaur.name %></h1>
 <p> Originally Found: <%= @dinosaur.location_found %></p>
 <p> <%= link_to "See More", @dinosaur.info_url %></p>
+<p> <%= @dinosaur.description %></p>
 <h3>
 User reviews:
 </h3>
