--- a/app/views/dinosaurs/edit.html.erb
+++ b/app/views/dinosaurs/edit.html.erb
@@ -13,6 +13,10 @@
     <%= form.label :info_url, class: "text-input-label" %><br>
     <%= form.text_field :info_url, class: "text-input-field", placeholder: @dinosaur.info_url%>
   </div>
+  <div class="field column small-12">
+    <%= form.label :description, class: "text-input-label" %><br>
+    <%= form.text_field :description, class: "text-input-field", placeholder: @dinosaur.description%>
+  </div>
   <br>
   <div class="actions">
     <%= form.submit "Change this dinosaur!", class: "button small round" %>
