--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -61,6 +61,7 @@ a {
 }
 .review-block {
   margin: 10px;
+  padding-bottom: 10px;
   background-color: #999;
 }
 .button-comment {
@@ -71,4 +72,14 @@ a {
 .button-comment:hover {
   background: green;
   box-shadow: 8px 8px 8px #777;
+}
+.comments {
+  background-color: #666;
+  color: white;
+  margin-left: 30px;
+  padding: 5px;
+  font-size: 10pt;
+}
+.comment-field {
+  margin: 10px 0px 0px 0px;
 }
