--- a/app/views/layouts/_comments.html.erb
+++ b/app/views/layouts/_comments.html.erb
@@ -1,6 +1,7 @@
 
 <%= form_for [@review, @comment] do |form| %>
   <div class="comment-field">
+    <%= form.label :body, "Comment", class: "text-input-label" %><br>
     <%= form.text_field :body, class: "text-input-field comment-input-field", placeholder: 'Add your comment!' %>
     <%= form.submit "Save comment", class: 'button-comment button expand round tiny'%>
   </div>
