issues with submit button on show page

--- a/app/views/dinosaurs/show.html.erb
+++ b/app/views/dinosaurs/show.html.erb
@@ -1,8 +1,14 @@
-<h1><%= @dinosaur.name %></h1>
-<p> Originally Found: <%= @dinosaur.location_found %></p>
-<p> Description: <%= @dinosaur.description %></p>
-<p> <%= link_to "See More", @dinosaur.info_url %></p>
-
+<div class="row">
+  <div class="dino-info large-4 columns">
+    <h1><%= @dinosaur.name %></h1>
+    <p> Originally Found: <%= @dinosaur.location_found %></p>
+    <p> Description: <%= @dinosaur.description %></p>
+    <p> <%= link_to "See More", @dinosaur.info_url %></p>
+  </div>
+  <div class="dino-image large-5 columns end">
+    <%= image_tag "giganotosaurus.jpg" %>
+  </div>
+</div>
 
 <h3>
 User reviews:
@@ -35,14 +41,14 @@ User reviews:
 
 <% if user_signed_in? %>
   <div class="row">
-    <%= form_for [@dinosaur, @review] do |f| %>
+    <%= form_for [@dinosaur, @review], {action: dinosaur_reviews_path(@dinosaur)} do |f| %>
       <div class="large-1 columns">
         <%= f.label :rating %>
-        <%= f.select :rating, [[1,1],[2,2],[3,3],[4,4],[5,5]], class: 'border-radius' %>
+        <%= f.select :rating, [[1,1],[2,2],[3,3],[4,4],[5,5]], class: 'border-radius', method: :post %>
       </div>
       <div class="large-8 columns">
         <%= f.label :body %>
-        <%= f.text_field :body %>
+        <%= f.text_field :body, placeholder: "Write a new review for #{@dinosaur.name}" %>
       </div>
       <br>
       <div class="large-9 columns">
