--- a/app/views/dinosaurs/show.html.erb
+++ b/app/views/dinosaurs/show.html.erb
@@ -26,17 +26,16 @@ User reviews:
             <% r.comments.each do |comment| %>
               <span class="comment-body"><%= comment.body %> </span>
               <span class="comment-user">(<%= comment.user.email %>) </span>
-<<<<<<< HEAD
+              <%= button_to "Update comment", edit_review_comment_path(review_id: @review.id, id: comment.id), method: :get %>
               <br>
-=======
-              <%= button_to "Update comment", edit_review_comment_path(review_id: @review.id, id: comment.id), method: :get %></li>
->>>>>>> 287286f40880ca60ff1e04aa669628cbfd520a6f
             <% end %>
-            <% if user_signed_in? %>
-              <%= render 'layouts/comments' %>
-            <% end %>
-          </ul>
+          </div>
+
+          <% if user_signed_in? %>
+            <%= render 'layouts/comments' %>
+          <% end %>
         </div>
+
         <div class="large-1 columns end">
           <%= button_to "Update", edit_review_path(r.id), class: 'crud-buttons button expand round tiny', method: :get %>
           <%= button_to "Delete", r, method: :delete, class: 'crud-buttons button expand round tiny' %>
@@ -71,3 +70,6 @@ User reviews:
   <%= link_to "Sign in", new_user_session_path %><br />
   <%= link_to "Sign up", new_user_session_path %><br />
 <% end %>
+
+@links.each do |link|
+  = link_to "upvote", like_link_path(link), method: :put
