pagination added to dinosaurs and reviews

--- a/app/views/dinosaurs/index.html.erb
+++ b/app/views/dinosaurs/index.html.erb
@@ -11,3 +11,4 @@
 </ul>
 
 <%= button_to "Create a dinosaur!", new_dinosaur_path, class: 'crud-buttons button expand round medium', method: :get %>
+<%= paginate @dinosaurs %>
