--- a/app/views/dinosaurs/show.html.erb
+++ b/app/views/dinosaurs/show.html.erb
@@ -20,14 +20,14 @@ User reviews:
         <div class="review-block large-8 columns">
           <span class="review-info"><%= r.user.email %> rates <%= @dinosaur.name %> a <%= r.rating %></span><br>
           <span class="review-body"><%= r.body %></span>
-          <%= link_to like_dinosaur_review_path(dinosaur_id: r.dinosaur_id, id: r.id), method: :put do %>
+          <%= button_to like_dinosaur_review_path(dinosaur_id: r.dinosaur_id, id: r.id), class: "tiny button round upvote-button", method: :put do %>
             Upvote
             <%= r.get_upvotes.size %>
           <% end %>
-          <%= link_to unvote_dinosaur_review_path(dinosaur_id: r.dinosaur_id, id: r.id), method: :put do %>
+          <%= button_to unvote_dinosaur_review_path(dinosaur_id: r.dinosaur_id, id: r.id), method: :put do %>
             Unvote
           <% end %>
-          <%= link_to dislike_dinosaur_review_path(dinosaur_id: r.dinosaur_id, id: r.id), method: :put do %>
+          <%= button_to dislike_dinosaur_review_path(dinosaur_id: r.dinosaur_id, id: r.id), method: :put do %>
             Downvote
             <%= r.get_downvotes.size %>
           <% end %>
