--- a/app/views/dinosaurs/index.html.erb
+++ b/app/views/dinosaurs/index.html.erb
@@ -10,4 +10,4 @@
   <% end %>
 </ul>
 
-<%= button_to "Create a dinosaur!", new_dinosaur_path, class: 'crud-buttons button expand round medium', method: :get %>
+<%= button_to "Create a dinosaur!", new_dinosaur_path, class: 'dino-crud-buttons button expand round medium', method: :get %>
