--- a/app/views/dinosaurs/new.html.erb
+++ b/app/views/dinosaurs/new.html.erb
@@ -20,6 +20,6 @@
 
   <br>
   <div class="actions">
-    <%= form.submit "Create a Dinosaur!", class: "crud-buttons button expand round medium" %>
+    <%= form.submit "Create a Dinosaur!", class: "dino-crud-buttons button expand round medium" %>
   </div>
 <% end %>
