--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -10,6 +10,6 @@
   </div>
   <br>
   <div class="large-9 columns">
-    <%= f.submit 'Update', class: 'crud-buttons button expand round medium' %>
+    <%= f.submit 'Update', class: 'dino-crud-buttons button expand round medium' %>
   </div>
 <% end %>
