--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -4,7 +4,7 @@
     <div class="column small-4">
       <%= user.email %>
       <% if user.admin? %>
-        <b>admin</b>
+        <b>Admin</b>
       <% end %>
     </div>
     <div class="column small-4 end">
