--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
       <ul class="right">
         <li>
           <%= form_tag(dinosaurs_path, :method => "get", class: "navbar-form", id: "search-form") do %>
-          <%= text_field_tag :search, params[:search], class: "span2", placeholder: "Search Dinosaurs" %>
+          <%= text_field_tag :search, params[:search], class: "search", placeholder: "Search Dinosaurs" %>
         </li>
         <li><%= submit_tag "Search", name: nil, class: "button" %> </li>
           <%- end -%>
