unvote working, tests created

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Dinosaurs</title>
   <%= stylesheet_link_tag 'application', media: 'all' %>
-  <%= stylesheet_link_tag 'buttons', media: 'all' %>
+  <%= stylesheet_link_tag 'sass/buttons', media: 'all' %>
   <%= stylesheet_link_tag 'comments', media: 'all' %>
   <%= stylesheet_link_tag 'reviews', media: 'all' %>
   <%= csrf_meta_tags %>
