edited search parameters and added link to all users for admin

--- a/app/assets/stylesheets/sass/buttons.scss
+++ b/app/assets/stylesheets/sass/buttons.scss
@@ -43,3 +43,9 @@ input.update-comment-crud-buttons.tiny {
     @include buttonhovers(purple);
   }
 }
+input.search-crud-buttons {
+  @include buttonstyles(#333);
+  &:hover{
+    @include buttonhovers(purple);
+  }
+}
