--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <h1>
   <%= @user.email %>
 </h1>
-<%= image_tag(current_user.profile_photo) %>
+<%= image_tag(current_user.profile_photo, class: "th") %>
 <%= button_to "Update Info", edit_user_path(@user), class: 'dino-crud-buttons button expand round medium', method: :get%>
 <%= button_to "Delete Account", @user, class: 'dino-crud-buttons button expand round medium', method: :delete %>
