--- a/app/assets/stylesheets/comments.css
+++ b/app/assets/stylesheets/comments.css
@@ -4,6 +4,7 @@
   padding: 5px;
   font-size: 10pt;
   box-shadow: 8px 8px 8px #777;
+  padding-top: 15px;
 }
 .comment-field {
   margin: 20px 0px 0px 0px;
@@ -15,7 +16,5 @@
   font-size: 10pt;
   font-weight: bold;
   color: #fff;
-}
-.comment-body {
-  margin-left: 15px;
+  margin-left: 60px;
 }
