--- a/app/views/dinosaurs/show.html.erb
+++ b/app/views/dinosaurs/show.html.erb
@@ -32,7 +32,8 @@
           <!-- end of upvote downvote -->
           </div>
           <div class="review-box">
-            <div class="review-body"><%= r.body %><span class="review-info"> (<%= r.user.email %>)</span></div>
+            <div class="review-image column small-2"><%= image_tag r.user.profile_photo, class: "review-user-thumb" %></div>
+            <div class="review-body"><%= r.body %></div>
             <div class="review-info"><%= @dinosaur.name %> got rating of <%= r.rating %></div>
           </div>
           <!--  this is for the comments block -->
@@ -40,6 +41,7 @@
             <span class="comment-header">Comments:</span>
             <br>
             <% r.comments.each do |comment| %>
+              <div class="comment-image column small-2"><%= image_tag comment.user.profile_photo, class: "comment-user-thumb" %></div>
               <span class="comment-body"><%= comment.body %> </span>
               <span class="comment-user">(<%= comment.user.email %>) </span>
               <% if current_user == comment.user %>
