some button styling and image in nav bar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -53,7 +53,10 @@ div a {
   border: 1px;
   margin-left: 60px;
 }
-div.review-image {
-  margin-right: auto;
-  margin-left: auto;
+.nav-user-thumb {
+  width: 40px;
+  height: 40px;
+  radius: 10px;
+  border: 1px;
+  margin-left: 60px;
 }
