--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -26,9 +26,7 @@
      <%= f.file_field :profile_photo %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+  <%= f.submit "Sign up", class: "dino-crud-buttons button expand round medium" %>
 <% end %>
 
 <%= render "devise/shared/links" %>
