--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
         </li>
       </ul>
         <%- if current_user -%>
+          <span class="nav-image"><%= image_tag current_user.profile_photo, class: "nav-user-thumb" %></span>
           <span id="user-show"><%= link_to current_user.email, user_path(current_user) %></span>
           <% if current_user.admin? %>
           <%= link_to "All Users", admin_users_path %>
@@ -27,7 +28,7 @@
           <%= form_tag(dinosaurs_path, :method => "get", class: "navbar-form", id: "search-form") do %>
           <%= text_field_tag :search, params[:search], class: "search", placeholder: "Search Dinosaurs" %>
         </li>
-        <li><%= submit_tag "Search", name: nil, class: "search-crud-buttons button expand round" %> </li>
+        <li><%= submit_tag "Search", name: nil, class: "search-crud-buttons button" %> </li>
           <%- end -%>
         <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
       </ul>
