--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -31,7 +31,7 @@
      <%= f.label :profile_photo, "Profile Photo" %><br />
      <%= f.file_field :profile_photo %>
   </div>
-  
+
   <div class="actions">
     <%= f.submit "Update" %>
   </div>
@@ -39,6 +39,6 @@
 
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "dino-crud-buttons button expand round medium" %></p>
 
 <%= link_to "Back", :back %>
