--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,8 +5,24 @@
   <div class="column small-4">
     <%= image_tag(current_user.profile_photo, class: "th") %>
   </div>
-  <div class="column small-4 end">
-    <%= button_to "Update Info", edit_user_registration_path(@user), class: 'dino-crud-buttons button expand round medium', method: :get%>
-    <%= button_to "Delete Account", @user, class: 'dino-crud-buttons button expand round medium', method: :delete %>
+  <div class="column small-8">
+    <p>
+      Welcome to your Dinosaur Account Page! We are so happy that you share our
+      love of dinosaurs, too.  Here you can see your contributions to the site
+      with links to your dinosaur's page.  You can also edit your own account
+      information. Have a DINOmite day!
+     </p>
   </div>
+</div>
+<h3>List of Dinosaurs Contributions:</h3>
+<div class="dinosaur-links">
+  <% @dinosaurs.each do |dinosaur|%>
+    <div class="dinosaur-link">
+      <%= link_to dinosaur.name, dinosaur_path(dinosaur) %><br>
+      <span class="dinosaur-desc"><%= dinosaur.description %></span>
+    </div>
+  <% end %>
+<div class="account-actions">
+  <%= button_to "Update Info", edit_user_registration_path(@user), class: 'dino-crud-buttons button expand round medium', method: :get%>
+  <%= button_to "Delete Account", @user, class: 'dino-crud-buttons button expand round medium', method: :delete %>
 </div>
