--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -31,14 +31,16 @@
      <%= f.label :profile_photo, "Profile Photo" %><br />
      <%= f.file_field :profile_photo %>
   </div>
-  
-  <div class="actions">
-    <%= f.submit "Update" %>
+
+  <div class="actions column small-3">
+    <%= f.submit "Update", class: 'dino-crud-buttons button round medium' %>
+    <%= button_to "Back", :back, class: 'dino-crud-buttons button round medium' %>
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
+  <div class="column small-10">
+    <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+    <p>Unhappy? We would be sad to see you go, but if you'd like, delete your account below.</p>
+      <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'dino-crud-buttons button round medium' %>
+  </div>
